@@ -1,7 +1,7 @@
 === MyKnowledgeBase ===
 Contributors: Guido07111975
-Donate link: https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=donation%40guidovanderleest%2enl
-Version: 6.0
+Donate link: https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=donate%40guido%2esite
+Version: 6.1
 Requires at least: 4.7
 Tested up to: 4.9
 License: GNU General Public License v3 or later
@@ -69,7 +69,7 @@ When you click the post link in frontend it will redirect you to this URL (so th
 You can change the search bar title via WordPress Dashboard > Appearance > Customize.
 
 = Browser support =
-The knowledgebase might not display 100% in IE8 and older because I have used css selector 'nth-of-type'.
+The knowledgebase might not display properly in IE8 and older because I have used CSS selector 'nth-of-type'.
 
 == Copyright ==
 = Fonts =
@@ -81,8 +81,8 @@ The knowledgebase might not display 100% in IE8 and older because I have used cs
 
 = Images =
 * Item: boats.jpg
-* Copyright author: Guido van der Leest
-* Author URI: https://www.guidovanderleest.nl
+* Copyright author: Guido
+* Author URI: https://www.guido.site
 * GNU General Public License v3 or later
 * https://www.gnu.org/licenses/gpl-3.0.html
 
