@@ -1,6 +1,12 @@
 CHANGELOG
 =========
 
+MyKnowledgeBase version 6.1 - june 2018
+- file comments: minor fix
+- both knowledgebase files: minor fix
+- updated file style
+- updated theme author info
+
 MyKnowledgeBase version 6.0 - february 2018
 - several small adjustments
 - updated files style and custom-editor-style
